--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     />
   </head>
   <body>
+     <nav class="zone green">
+    <ul class="main-nav">
+        <li><a href="">About</a></li>
+        <li><a href="">Products</a></li>
+        <li><a href="">Our Team</a></li>
+        <li class="push"><a href="">Contact</a></li>
+    </ul>
+  </nav>
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
